20251217-後台html更新串接

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -25,6 +25,6 @@
             <p class="item-price" th:text="'NT$ ' + ${#numbers.formatDecimal(item.price, 1, 'COMMA', 2, 'POINT')}">價格</p>
         </div>
     </div>
-    <a href="/" class="home-link">回到首頁</a>
+    <a href=C:\Users\User\Desktop\5341\src\main\resources\templates\welcome.html class="home-link">回到首頁</a>
 </body>
 </html>
