--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -34,6 +34,6 @@
             </tr>
         </tbody>
     </table>
-    <a href="/" class="home-link">回到首頁</a>
+    <a href=C:\Users\User\Desktop\5341\src\main\resources\templates\welcome.html class="home-link">回到首頁</a>
 </body>
 </html>
