--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -33,8 +33,8 @@
     <h1>🐥 歡迎來到雞娃娃飲料！ 🐥</h1>
     <p>一個充滿活力、療癒和幸福感的地方。</p>
     <div>
-        <a href="/chick/menu" class="nav-link">小雞菜單 (Menu)</a>
-        <a href="/egg/hatch" class="nav-link">查看訂單 (Orders)</a>
+        <a href="C:\Users\User\Desktop\5341\src\main\resources\templates\menu.html" class="nav-link">小雞菜單 (Menu)</a>
+        <a href=C:\Users\User\Desktop\5341\src\main\resources\templates\orders.html class="nav-link">查看訂單 (Orders)</a>
     </div>
 </body>
 </html>
